--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="assets/css/fontawesome.css">
-    <link rel="stylesheet" href="assets/css/templatemo-cyborg-gaming.css">
+    <link rel="stylesheet" href="assets/css/cyborg-gaming.css">
     <link rel="stylesheet" href="assets/css/owl.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet"href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/>
@@ -63,7 +63,7 @@
                         <li><a href="browse.html">Browse</a></li>
                         <li><a href="#" class="active">Details</a></li>
                         <li><a href="streams.html">Streams</a></li>
-                        <li><a href="support.html">Support</a></li>
+                        <li><a href="support.php">Support</a></li>
                         <li><a href="profile.html">Profile <img src="assets/images/profile-header.jpg" alt=""></a></li>
                     </ul>   
                     <a class='menu-trigger'>
